--- a/_posts/2024-03-06-arch-wslg.md
+++ b/_posts/2024-03-06-arch-wslg.md
@@ -28,7 +28,7 @@ tags:
 # Prepare 准备
 0. ensure WSL components and Arch packages are all updated.  
     确保 WSL 组件和 Arch 包已更新.  
-    ```ps1
+    ```sh
     PS> wsl --update
     Checking for updates.
     The most recent version of Windows Subsystem for Linux is already installed.
@@ -80,7 +80,7 @@ tags:
 
 6. restart Arch@WSL2 in Windows PowerShell.  
     在 Windows PowerShell 中 重启 Arch@WSL2.  
-    ```ps1
+    ```sh
     wsl.exe -t Arch
     ```
 
@@ -138,6 +138,7 @@ Enter Arch terminal.
     ```
     - So use `vdpauinfo` over VA-API by package `libvdpau-va-gl`. But VA-API fails on x11, and VDPAU only runs on x11.  
     - 所以安装包 `libvdpau-va-gl` 来使 `vdpauinfo` 调用 VA-API 驱动. 但 VA-API 不能在 x11 运行, 而 VDPAU 只支持 x11.  
+
     ```sh
     $ sudo pacman -S libvdpau-va-gl
     $ VDPAU_DRIVER=va_gl vdpauinfo
@@ -167,8 +168,9 @@ Enter Arch terminal.
 # Lib Details 运行库详情
 In website https://pkgs.org , you can use filename below (`libvulkan_lvp.so`) to search package name in your distro.  
 可以在网站 https://pkgs.org 中, 用下面的文件名(`libvulkan_lvp.so`)来搜索你的发行版对应的包名.  
+
 | API | lib | driver | drivers | info util | test utils |
-|------|-----|--------|---------|-----------|------------|
+|-----|-----|--------|---------|-----------|------------|
 | GLX | libGLX*.so | d3d12_dri.so | /usr/lib/dri/*_dri.so | glxinfo | glxgears |
 | EGL | libEGL*.so | d3d12_dri.so | /usr/lib/dri/*_dri.so | eglinfo | eglgears_wayland, eglgears_x11 |
 | GLES | libGLESv2.so | d3d12_dri.so | /usr/lib/dri/*_dri.so | es2_info | es2gears_wayland, es2gears_x11 |
@@ -180,6 +182,7 @@ In website https://pkgs.org , you can use filename below (`libvulkan_lvp.so`) to
 # Glitches in GUI 程序花屏  
 - Enter WLSg system distro, and restart weston.  
 - 进入 WLSg 系统发行版, 重启 weston.  
+
 ```sh
 PS> wsl --system
 
@@ -227,6 +230,7 @@ logout
     ```
     - If you have two or more distros installed in WSL2, the last started distro may recreate the dev files even in the first started distro, and make the owner group mismatch in the first distro.  
     - 如果你在 WSL2 里安装了多个发行版, 后启动的发行版会重新创建这些设备文件, 甚至会影响先启动的发行版, 导致这些设备文件用户组混乱.  
+
     ```sh
     $ ls -l /dev/dxg /dev/dri/card0 /dev/dri/renderD128
     crw-rw---- 1 root  985 226,   0 Mar  6 18:52 /dev/dri/card0
@@ -288,7 +292,7 @@ logout
     tmpfs on /mnt/wslg/run/user/1000 type tmpfs (rw,nosuid,nodev,relatime,size=1626348k,nr_inodes=406587,mode=700,uid=1000,gid=1000)
     ```
 
-# References 参考文件
-[^1]: [Diagnosing "cannot open display" type issues with WSLg](https://github.com/microsoft/wslg/wiki/Diagnosing-%22cannot-open-display%22-type-issues-with-WSLg)  
-[^2]: [create `/etc/tmpfiles.d/wslg.conf`](https://github.com/microsoft/wslg/issues/43#issuecomment-826039096)  
-[^3]: [With two distros in WSL2, group of /dev/dri/card0 may be changed by the last started distro, and cause vainfo failed in the first distro ](https://github.com/microsoft/wslg/issues/1208)  
+# References 参考链接
+[1]: [Diagnosing "cannot open display" type issues with WSLg](https://github.com/microsoft/wslg/wiki/Diagnosing-%22cannot-open-display%22-type-issues-with-WSLg)  
+[2]: [create `/etc/tmpfiles.d/wslg.conf`](https://github.com/microsoft/wslg/issues/43#issuecomment-826039096)  
+[3]: [With two distros in WSL2, group of /dev/dri/card0 may be changed by the last started distro, and cause vainfo failed in the first distro ](https://github.com/microsoft/wslg/issues/1208)  
