--- a/_posts/2024-03-06-arch-wslg.md
+++ b/_posts/2024-03-06-arch-wslg.md
@@ -9,12 +9,6 @@ tags:
   - systemd
 ---
 
-<!--
-#！https://zhuanlan.zhihu.com/p/685646472
-
-# 在 Arch@WSL2 中启用 systemd , GUI 与 GPU加速
--->
-
 [知乎](https://zhuanlan.zhihu.com/p/685646472)
 
 众所周知, Ubuntu in WSL2 是微软和Ubuntu的亲儿子, 从两边都得到了最好的支持, 开箱即用.  
@@ -50,7 +44,7 @@ tags:
     ```
 
 2. create `/etc/tmpfiles.d/wslg.conf`.  
-    创建 `/etc/tmpfiles.d/wslg.conf`.  
+    创建 `/etc/tmpfiles.d/wslg.conf`[^2].  
     ```
     # Type Path           Mode UID  GID  Age Argument
     L+     /tmp/.X11-unix -    -    -    -   /mnt/wslg/.X11-unix
@@ -201,9 +195,9 @@ logout
 ```
 
 # Problems 问题
+- cannot open display: :0[^1]
 - Error: couldn't open display :0
 - Error: unable to open display :0
-- cannot open display: :0
 - XCB failed to connect to the X server due to error:1.
 - EGLUT: failed to initialize native display
 - qt.qpa.xcb: could not connect to display :0
@@ -228,8 +222,8 @@ logout
     crw-rw-rw- 1 root render 226, 128 Mar  6 18:49 /dev/dri/renderD128
     crw-rw-rw- 1 root root    10, 127 Mar  6 18:49 /dev/dxg
     ```
-    - If you have two or more distros installed in WSL2, the last started distro may recreate the dev files even in the first started distro, and make the owner group mismatch in the first distro.  
-    - 如果你在 WSL2 里安装了多个发行版, 后启动的发行版会重新创建这些设备文件, 甚至会影响先启动的发行版, 导致这些设备文件用户组混乱.  
+    - If you have two or more distros installed in WSL2, the last started distro may recreate the dev files even in the first started distro, and make the owner group mismatch in the first distro[^3].  
+    - 如果你在 WSL2 里安装了多个发行版, 后启动的发行版会重新创建这些设备文件, 甚至会影响先启动的发行版, 导致这些设备文件用户组混乱[^3].  
 
     ```sh
     $ ls -l /dev/dxg /dev/dri/card0 /dev/dri/renderD128
@@ -293,6 +287,6 @@ logout
     ```
 
 # References 参考链接
-[1]: [Diagnosing "cannot open display" type issues with WSLg](https://github.com/microsoft/wslg/wiki/Diagnosing-%22cannot-open-display%22-type-issues-with-WSLg)  
-[2]: [create `/etc/tmpfiles.d/wslg.conf`](https://github.com/microsoft/wslg/issues/43#issuecomment-826039096)  
-[3]: [With two distros in WSL2, group of /dev/dri/card0 may be changed by the last started distro, and cause vainfo failed in the first distro ](https://github.com/microsoft/wslg/issues/1208)  
+[^1]: [Diagnosing "cannot open display" type issues with WSLg](https://github.com/microsoft/wslg/wiki/Diagnosing-%22cannot-open-display%22-type-issues-with-WSLg)  
+[^2]: [create `/etc/tmpfiles.d/wslg.conf`](https://github.com/microsoft/wslg/issues/43#issuecomment-826039096)  
+[^3]: [With two distros in WSL2, group of /dev/dri/card0 may be changed by the last started distro, and cause vainfo failed in the first distro ](https://github.com/microsoft/wslg/issues/1208)  
