disable cgroup-v1 for systemd-256

--- a/_posts/2024-03-06-arch-wslg.md
+++ b/_posts/2024-03-06-arch-wslg.md
@@ -19,6 +19,8 @@ tags:
 
 理论上应该在所有支持 WSLg 和 systemd 的 WSL Linux 发行版中都有效.  
 
+**2024-6-23** Arch 更新 `systemd-256` 后必须禁用 `cgroup-v1`.  
+
 # Prepare 准备
 0. ensure WSL components and Arch packages are all updated.  
     确保 WSL 组件和 Arch 包已更新.  
@@ -72,10 +74,19 @@ tags:
     sudo usermod --append --groups video,render user1
     ```
 
-6. restart Arch@WSL2 in Windows PowerShell.  
+6. edit `%UserProfile%/.wslconfig` to disable `cgroup-v1` in windows, see [^4]. **New Added in 2024-6-23**    
+    在 Windows 中编辑 `%UserProfile%/.wslconfig` 以禁用 `cgroup-v1`, 参见 [^4]. **2024-6-23 新加入**  
+    You must do so from `systemd-256`.  
+    Arch 系统更新 `systemd-256` 及后续版本后, 此步骤必做.  
+    ```
+    [wsl2]
+    kernelCommandLine = cgroup_no_v1=all systemd.unified_cgroup_hierarchy=1
+    ```
+
+7. restart Arch@WSL2 in Windows PowerShell.  
     在 Windows PowerShell 中 重启 Arch@WSL2.  
     ```sh
-    wsl.exe -t Arch
+    wsl.exe --shutdown
     ```
 
 # Install and check 安装并检查
@@ -290,3 +301,4 @@ logout
 [^1]: [Diagnosing "cannot open display" type issues with WSLg](https://github.com/microsoft/wslg/wiki/Diagnosing-%22cannot-open-display%22-type-issues-with-WSLg)  
 [^2]: [create `/etc/tmpfiles.d/wslg.conf`](https://github.com/microsoft/wslg/issues/43#issuecomment-826039096)  
 [^3]: [With two distros in WSL2, group of /dev/dri/card0 may be changed by the last started distro, and cause vainfo failed in the first distro ](https://github.com/microsoft/wslg/issues/1208)  
+[^4]: [Configure WSL to use cgroupsv2](https://github.com/spurin/wsl-cgroupsv2)
